<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardCornerRadius="12dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_marginBottom="8dp" />

                <LinearLayout
                    android:id="@+id/language_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:src="@drawable/ic_language"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/language" />

                    <TextView
                        android:id="@+id/selected_language_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/arabic"
                        android:textSize="14sp"
                        android:layout_marginStart="16dp" />

                    <ImageView
                        android:src="@drawable/ic_chevron_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardCornerRadius="12dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Social_media"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_marginBottom="8dp" />

                <LinearLayout
                    android:id="@+id/telegram_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground">
                    <ImageView
                        android:src="@drawable/ic_telegram"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:text="@string/Follow_us_on_Telegram"
                        android:textSize="14sp"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/facebook_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground">
                    <ImageView
                        android:src="@drawable/ic_facebook"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:text="@string/Our_Facebook_page"
                        android:textSize="14sp"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/website_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground">
                    <ImageView
                        android:src="@drawable/ic_website"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:text="@string/Visit_our_website"
                        android:textSize="14sp"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_marginBottom="8dp" />

                <LinearLayout
                    android:id="@+id/about_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground">
                    <ImageView
                        android:src="@drawable/ic_info"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/about" />
                    <TextView
                        android:text="@string/about_app"
                        android:textSize="14sp"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/policy_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground">
                    <ImageView
                        android:src="@drawable/ic_policy"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/policy" />
                    <TextView
                        android:text="@string/privacy_policy"
                        android:textSize="14sp"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>